seedboxk8s/applications/registry/Middleware.registry-redirect-root.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: registry-redirect-root
  namespace: registry
spec:
  redirectRegex:
    regex: ^/$
    replacement: https://registry-browser.${testingClusterFqdn}
    permanent: true
