seedboxk8s/applications/registry/Deployment.auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: registry
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth
    spec:
      containers:
      - name: docker-auth
        image: docker.io/cesanta/docker_auth:1.14.0@sha256:98e0307e0d2dcbafe10098814a97d248143b78ca478693f78c3c0d67fe776ab4
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: processed-config
          mountPath: /processed
        - name: token-cert-volume
          mountPath: /token-certs
        args: ["-logtostderr", "-v", "5", "/processed/auth_config.yml"]
      volumes:
      - name: python-temple
        configMap:
          name: python-temple
      - name: unprocessed-config
        configMap:
          name: docker-auth-config
      - name: config-substitutions
        secret:
          secretName: docker-auth-config-secret-substitutions
      - name: processed-config
        emptyDir: {}
      - name: token-cert-volume
        secret:
          secretName: docker-auth-cert-backing-secret
