seedboxk8s/applications/registry/Deployment.browser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browser
  namespace: registry
  labels:
    app.kubernetes.io/name: browser
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: browser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: browser
    spec:
      containers:
        - name: browser
          image: klausmeyer/docker-registry-browser:1.10.1
          ports:
            - containerPort: 8080
