seedboxk8s/applications/registry/Deployment.registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000

          volumeMounts:
            - name: docker-auth-cert
              mountPath: /etc/docker-auth-cert
            - name: image-store
              mountPath: /var/lib/registry
      volumes:
        - name: docker-auth-cert
          secret:
            secretName: docker-auth-cert-backing-secret
        - name: image-store
          persistentVolumeClaim:
            claimName: registry-pvc
        - name: registry-config
          configMap:
            name: registry-config
