seedboxk8s/applications/registry/StatefulSet.registry.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: registry
  labels:
    app.kubernetes.io/name: registry
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  serviceName: registry
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
    spec:
      containers:
        - name: registry
          image: docker.io/library/registry:3@sha256:ddf754342cfc8acc51a56d5d0ab6af06826461864460636d8bd5c546dab2a7b8
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: docker-auth-cert
              mountPath: /etc/docker-auth-cert
            - name: image-store-lvm
              mountPath: /var/lib/registry
      volumes:
        - name: data-import-helper
          configMap:
            name: data-import-helper
        - name: import
          emptyDir: {}
        - name: docker-auth-cert
          secret:
            secretName: docker-auth-cert-backing-secret
        - name: image-store-lvm
          persistentVolumeClaim:
            claimName: registry-lvm-pvc
        - name: registry-config
          configMap:
            name: registry-config
