seedboxk8s/applications/registry/Service.auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: registry
spec:
  selector:
    app.kubernetes.io/name: auth
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
