seedboxk8s/applications/registry/Service.browser.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser
  namespace: registry
spec:
  selector:
    app.kubernetes.io/name: browser
  ports:
  - port: 80
    targetPort: 8080
