seedboxk8s/applications/registry/Service.registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    app.kubernetes.io/name: registry
  ports:
  - port: 80
    targetPort: 5000
