seedboxk8s/applications/registry/IngressRoute.browser.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: browser-ingress-route
  namespace: registry
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Registry Browser
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: docker
    gethomepage.dev/href: https://registry-browser.${productionClusterFqdn}
    gethomepage.dev/pod-selector: app.kubernetes.io/name=browser
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    # We have to keep the browser on a separate domain
    # so that it can use the web auth middleware.
    # Docker clients won't support that middleware;
    # they use token based auth instead with the docker_auth deployment.
    - match: Host(`registry-browser.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: browser
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
