seedboxk8s/applications/registry/IngressRoute.registry.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry-ingress-route
  namespace: registry
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.${productionClusterFqdn}`) && PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: auth
          kind: Service
          port: 80
    - match: Host(`registry.${productionClusterFqdn}`)
      kind: Rule
      middlewares:
        - name: registry-redirect-root
      services:
        - name: registry
          kind: Service
          port: 80
  tls:
    secretName: seedbox-wildcard-backing-secret
